Fix item in collapser.scss

--- a/src/styles/components/collapser.scss
+++ b/src/styles/components/collapser.scss
@@ -56,14 +56,14 @@
   gap: 70px;
   margin: 30px auto;
   width: 95%;
-  &_item{
+  &__item {
     width: 50%;
   }
-  @media screen and (max-width: 650px){
+  @media screen and (max-width: 650px) {
     flex-direction: column;
     gap: 20px;
     margin: 20px auto;
-    &_item{
+    &__item {
       width: 100%;
     }
   }
